--- a/docs/3.0rc/develop/global-concurrency-limits.mdx
+++ b/docs/3.0rc/develop/global-concurrency-limits.mdx
@@ -65,7 +65,7 @@ For example:
 - With a decay rate of 5.0, you could run a task roughly every 0.2 seconds.
 - With a decay rate of 0.1, you'd wait about 10 seconds between task runs.
 
-Choose a decay rate that balances your need for frequent task execution with the desire to limit overall system load. This allows you to fine-tune your workflow's performance and resource usage.
+Choose a decay rate that balances your needed frequency of task execution with the acceptable limit of overall system load. This allows you to fine-tune your workflow's performance and resource usage.
 
 ### Through the UI
 
