--- a/docs/3.0rc/develop/global-concurrency-limits.mdx
+++ b/docs/3.0rc/develop/global-concurrency-limits.mdx
@@ -28,7 +28,7 @@ controlled rate determined by `slot_decay_per_second`. With a concurrency limit,
 
 ## Manage global concurrency and rate limits
 
-You may create, read, edit, and delete concurrency limits through the Prefect UI, CLI, or Python SDK.
+You can create, read, edit, and delete concurrency limits through the Prefect UI, CLI, or Python SDK.
 
 When creating a concurrency limit, you can specify the following parameters:
 
