--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -138,7 +138,7 @@ Prefect automatically tracks the state of the flow run and logs the output, whic
 
 ## Create a work pool
 
-Running a flow locally is a good start, but most use cases require a remote environment.
+Running a flow locally is a good start, but most use cases require a remote execution environment.
 A [work pool](/3.0rc/deploy/infrastructure-concepts/work-pools/) is the most common interface for deploying flows to remote infrastructure.
 
 <Tabs>
