--- a/docs/3.0rc/develop/write-tasks.mdx
+++ b/docs/3.0rc/develop/write-tasks.mdx
@@ -71,7 +71,7 @@ Running that flow in the terminal results in output like this:
 This task run is tracked in the UI as well.
 
 Tasks are uniquely identified by a task key, which is a hash composed of the task name, the fully qualified name of the function, and any tags. 
-If the task does not have a name specified, the name is derived from the task function.
+If the task does not have a name specified, the name is derived from the decorated function object.
 
 <Note>
 **How big should a task be?**
