--- a/docs/contribute/docs-contribute.mdx
+++ b/docs/contribute/docs-contribute.mdx
@@ -10,7 +10,7 @@ We use [Mintlify](https://mintlify.com/) to host and build the Prefect documenta
 
 The main branch of the [prefecthq/prefect](https://github.com/PrefectHQ/prefect) GitHub repository is used to build the Prefect 3.0rc docs at [docs-3.prefect.io](https://docs-3.prefect.io).
 
-The 2.x docs are hosted at [docs.prefect.io](https://docs.prefect.io) and built from the 2.x branch of the repository.
+The 2.x docs are hosted at [docs-2.prefect.io](https://docs-2.prefect.io) and built from the 2.x branch of the repository.
 
 ## Fork the repository
 
