Add exact ip allowlist entry limit into docs.

--- a/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
@@ -14,7 +14,7 @@ To get started, use the Prefect CLI to add an IP address to the allowlist:
 prefect cloud ip-allowlist add <your-ip-address> --description "My home IP address"
 ```
 
-The allowlist has a limit to how many entries can be added; 
+The allowlist has a limit of 25 entries; 
 however in addition to individual IP addresses, a range of IP addresses can be added as a single entry using CIDR notation:
 
 ```bash
