--- a/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
@@ -8,7 +8,7 @@ Prefect Cloud APIs and UI at the network level by giving users the ability to ma
 
 To get started, use the Prefect CLI to add an IP address to the allowlist:
 
-<Note>To help prevent accidental account lockouts, updates to an allowlist requires the requestor's current IP address to be on the list.</Note>
+<Note>To help prevent accidental account lockouts, an update to an allowlist requires the requestor's current IP address to be on the list.</Note>
 
 ```bash
 prefect cloud ip-allowlist add <your-ip-address> --description "My home IP address"
