--- a/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/secure-access-by-ip-address.mdx
@@ -33,7 +33,7 @@ Individual entries can also be toggled on or off:
 prefect cloud ip-allowlist toggle <ip-address>
 ```
 
-Once enabled with at least 1 enabled IP entry, the allowlist will be enforced for all incoming requests to Prefect Cloud from the UI and API.
+Once turned on with at least one enabled IP entry, the allowlist will be enforced for all incoming requests to Prefect Cloud from the UI and API.
 
 For other related commands, see the CLI help documentation with:
     
