Apply suggestions from code review
Co-authored-by: nate nowack <thrast36@gmail.com>

--- a/docs/3.0rc/deploy/infrastructure-concepts/deploy-via-python.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/deploy-via-python.mdx
@@ -335,7 +335,7 @@ if __name__ == "__main__":
 ```
 
 Job variables can be used to customize environment variables, resources limits, and other infrastructure options
- allowing fine-grained control over your infrastructure on a per-deployment basis.
+ allowing fine-grained control over your infrastructure on a per-deployment or per-flow-run basis.
 Any variable defined in the base job template of the associated work pool can be overridden by a job variable.
 
 You can learn more about job variables [here](3.0rc/deploy/infrastructure-concepts/customize).
