Mention alternatives to Docker code storage in pre-reqs

--- a/docs/3.0rc/deploy/infrastructure-concepts/deploy-via-python.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/deploy-via-python.mdx
@@ -44,8 +44,9 @@ the Prefect UI or using the Prefect CLI. For more information, see the [Work Poo
     prefect work-pool create --type docker my-work-pool
     ```
 
-4. Docker: Install Docker on your local machine. Docker will be used to build and store the image containing your flow code. You can download 
-Docker from the [official Docker website](https://www.docker.com/get-started/).
+4. Docker: Docker will be used to build and store the image containing your flow code. You can download and install
+Docker from the [official Docker website](https://www.docker.com/get-started/). If you don't want to use Docker, you 
+can see other options in the [Use remote code storage](#use-remote-code-storage) section.
 
 5. (Optional) A Docker registry account: While not strictly necessary for local development, having an account with a Docker registry (such as 
 Docker Hub) is recommended for storing and sharing your Docker images.
