--- a/docs/3.0rc/develop/index.mdx
+++ b/docs/3.0rc/develop/index.mdx
@@ -17,7 +17,7 @@ The **Configure runtime behavior** section introduces advanced features for inte
 
 - [Configure task caching](/3.0rc/develop/task-caching/) explores how to cache task results to save money and time.
 - [Write transactions](/3.0rc/develop/transactions/) shows how to group tasks together to ensure they run atomically.
-- [Execute code on state changes](/3.0rc/develop/state-hooks/) shows how to run code when a task or flow changes state.
+- [Execute code on state changes](/3.0rc/develop/manage-states#execute-code-on-state-changes) shows how to run code when a task or flow changes state.
 - [Pause and resume flow runs](/3.0rc/develop/pause-resume/) explains how to halt flow runs for input.
 - [Send and receive flow run inputs](/3.0rc/develop/inputs/) highlights how to run Human-in-the-Loop workflows with Prefect.
 - [Access runtime context](/3.0rc/develop/runtime-context/) shows how to access information about the current run.
