--- a/docs/snippets/final-flow-state.mdx
+++ b/docs/snippets/final-flow-state.mdx
@@ -25,7 +25,7 @@ def my_flow():
     state = add_one("1", return_state=True)
     assert state.is_failed()
 
-    # the flow function returns succesfully!
+    # the flow function returns successfully!
     return
 ```
 
