--- a/docs/3.0rc/develop/manage-states.mdx
+++ b/docs/3.0rc/develop/manage-states.mdx
@@ -28,7 +28,7 @@ A state's name is often, but not always, synonymous with its type. For example, 
 that is running for the first time has a state with the name Running and the type `RUNNING`. However, if the task retries, 
 that same task run will have the name Retrying and the type `RUNNING`. 
 
-The dinstinct between types and names is subtle: state _types_ are typically used for backing orchestration logic, whereas state _names_ are more for visual display and bookkeeping.
+The distinction between types and names is subtle: state _types_ are typically used for backing orchestration logic, whereas state _names_ are more for visual display and bookkeeping.
 
 The full list of states and state types includes:
   
@@ -58,7 +58,7 @@ The final state of a flow or task run depends on a number of factors; generally 
 
 ### Task return values
 
-A task will be placed into a `Completed` state if it returns essentially _any_ Python object, with one exception:
+A task will be placed into a `Completed` state if it returns  _any_ Python object, with one exception:
 if a task explicitly returns a Prefect `Failed` state, the task will be marked `Failed`.
 
 ```python
@@ -82,7 +82,7 @@ def example():
     # this run will be set to a `Completed` state
     state_two = toggle_task(fail=False)
 
-    # similarly, the flow will fail because we return a `Failed` state
+    # similarly, the flow run will fail because we return a `Failed` state
     return state_one, state_two 
 ```
 
