--- a/docs/3.0rc/develop/index.mdx
+++ b/docs/3.0rc/develop/index.mdx
@@ -24,7 +24,7 @@ The **Configure runtime behavior** section introduces advanced features for inte
 The **Manage state and configuration** section explores how to manage data and configuration in Prefect.
 
 - [Manage results](/3.0rc/develop/results/) explains how to store and retrieve task results.
-- [Manage states](/3.0rc/develop/manage-states/) discusses how to get take action based on task and flow run states.
+- [Manage states](/3.0rc/develop/manage-states/) discusses how to take action based on task and flow run states.
 - [Create run artifacts](/3.0rc/develop/artifacts/) demonstrates how to create artifacts for human consumption in the UI.
 - [Set and get variables](/3.0rc/develop/variables/) shows how to store and retrieve configuration values from API.
 - [Connect to external systems](/3.0rc/develop/blocks/) discusses how Prefect blocks can help you connect to external systems.
